--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,4 +20,8 @@ spring:
           hibernate:
           format_sql: true
           use_sql_comments: true
+          jdbc:
+          batch_size: 100
+          order_inserts: true
+          generate_statistics: true
 
