--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ build/
 ### VS Code ###
 .vscode/
 minio-data/
+!/target/Restaurant-Manager-BE-0.0.1-SNAPSHOT.jar
+!/target/Restaurant-Manager-BE-0.0.1-SNAPSHOT.jar.original
