--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,10 +21,10 @@ spring:
       hibernate:
           ddl-auto: none
       show-sql: true
-      properties:
-          hibernate:
-            format_sql: true
-            use_sql_comments: true
+#      properties:
+#          hibernate:
+#            format_sql: true
+#            use_sql_comments: true
 
 
 
