--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,6 +15,11 @@ spring:
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: 10
+  cache:
+    type: redis
+    redis:
+      time-to-live: 30000 # 5 minutes
+
 
 
   jpa:
