--- a/app.yml
+++ b/app.yml
@@ -6,8 +6,10 @@ services:
     container_name: spring-app
     ports:
       - "8080:8080"
+      - "8085:8085"
     depends_on:
       - minio
+      - redis
     environment:
       MINIO_URL: http://minio:9000
       MINIO_ACCESS_KEY: minio
